navigation: fixed nav jumping issue

--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -5,5 +5,5 @@
 
 
 body {
-  @include web-font('PT Sans', sans-serif);
+  @extend %web-font;
 }
